--- a/index.css
+++ b/index.css
@@ -177,8 +177,9 @@ footer {
 
 .correo-icons {
     display: flex;
-    list-style: none;
-    justify-content: center;
     justify-content: space-around;
 }
 
+.icons{
+    padding:5px;
+}
